# river_ksn

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-31-river-ksn-plan.md
docs/superpowers/specs/: 2026-05-31-river-ksn-design.md
river_ksn/: __main__.py  channel.py  dem.py  export.py  hydrology.py  ksn.py  pipeline.py
tests/: test_channel.py  test_dem.py  test_export.py  test_ksn.py  test_pipeline.py
